base code is working on tomcat 7.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:pom="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
   
@@ -9,7 +10,8 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <name>ont-viewer</name>
-  <url>http://maven.apache.org</url>
+  
+
   
   <dependencies>
     <dependency>
@@ -18,12 +20,25 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
-    	<groupId>javaee</groupId>
-    	<artifactId>javaee</artifactId>
-    	<version>5</version>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>2.5</version>
+    	<scope>provided</scope>
     </dependency>
   </dependencies>
   
 
+  <build>
+  	<plugins>
+  		<plugin>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<configuration>
+  				<source>1.6</source>
+  				<target>1.6</target>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
