added ability to change page file extension (i.e., .html, .php) etc..

--- a/src/main/resources/ont-viewer.properties
+++ b/src/main/resources/ont-viewer.properties
@@ -1,2 +1,7 @@
 #properties for the application
 site-title=Security Automation Vocabularies
+
+# the file extension for all pages (note, .html should be used if client desires dynamic pages to match their static counterparts).
+file-extension=.html
+
+##TODO: factor in servlet-path into here and use maven filtering to filter web.xml to include dynamic path.
