--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
     	<artifactId>velocity</artifactId>
     	<version>1.7</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-cli</groupId>
+    	<artifactId>commons-cli</artifactId>
+    	<version>1.2</version>
+    </dependency>
   </dependencies>
   
 
